users: add devise trackable and return fields via api.
