# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2021_07_30_151127) do
+ActiveRecord::Schema.define(version: 2021_08_11_152854) do
 
   create_table "activities", charset: "utf8mb4", collation: "utf8mb4_0900_ai_ci", force: :cascade do |t|
     t.text "schedule", size: :medium, null: false
@@ -165,6 +165,11 @@ ActiveRecord::Schema.define(version: 2021_07_30_151127) do
     t.datetime "remember_created_at"
     t.string "epr_uuid"
     t.text "ldap"
+    t.integer "sign_in_count", default: 0, null: false
+    t.datetime "current_sign_in_at"
+    t.datetime "last_sign_in_at"
+    t.string "current_sign_in_ip"
+    t.string "last_sign_in_ip"
     t.index ["email"], name: "index_users_on_email", unique: true
     t.index ["epr_uuid"], name: "index_users_on_epr_uuid", unique: true
     t.index ["reset_password_token"], name: "index_users_on_reset_password_token", unique: true
